--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=PT6312
 version=1.0.0
 author=Ysard
 maintainer=Ysard <ysard@users.noreply.github.com>
-sentence=PT6312 is a Arduino/AVR library for the PT6312 family of Vacuum Fluorescent Display (VFD) controllers including AD16312, HT16512, ET16312 etc.
+sentence=PT6312 is an Arduino/AVR library for the PT6312 family of Vacuum Fluorescent Display (VFD) controllers including AD16312, HT16512, ET16312 etc.
 paragraph=It allows the full management of control boards of VFD screens extracted in particular from DVD players by micro-controllers supporting the Arduino development environment.
 category=Display
 url=https://github.com/ysard/PT6312
