--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Ysard <ysard@users.noreply.github.com>
 sentence=PT6312 is an Arduino/AVR library for the PT6312 family of Vacuum Fluorescent Display (VFD) controllers including AD16312, HT16512, ET16312 etc.
 paragraph=It allows the full management of control boards of VFD screens extracted in particular from DVD players by micro-controllers supporting the Arduino development environment.
 category=Display
-url=https://github.com/ysard/PT6312
+url=https://github.com/ysard/PT6312_VFD_Arduino_Library
 architectures=*
 includes=PT6312.h
